@@ -28,7 +28,7 @@ public class ServerApi {
     public List<Result> sendBlockIpConf() {
         DataResult<List<AllSuspectIpEntity>> allSuspectIpEntityDataResult = allSuspectIpService.getAllSuspectIp(false);
         if (allSuspectIpEntityDataResult.isSuccess()) {
-            return serverService.blockIpConfUpload(allSuspectIpEntityDataResult.getData().stream().map(AllSuspectIpEntity::getIpAddress).collect(Collectors.toList()));
+            return serverService.blockIpConfUpload(allSuspectIpEntityDataResult.getData().stream().map(AllSuspectIpEntity::getIpAddress).toList());
         } else {
             return List.of(allSuspectIpEntityDataResult);
         }
@@ -47,6 +47,11 @@ public class ServerApi {
     @GetMapping("get-all")
     public Result getAllServer() {
         return serverService.getServerList();
+    }
+
+    @DeleteMapping("delete")
+    public Result deleteServerByIdList(@RequestBody List<Integer> idList){
+        return serverService.deleteServerByIdList(idList);
     }
 
 }
